[project]
name = "pyvideotrans"
version = "3.78"
description = "Open Source Video Translation software"
authors = [{ name = "jianchng512@gmail.com" }]
license-files = ["LICEN[CS]E*"]
readme = "README.md"
requires-python = ">=3.10,<=3.12"
dependencies = [
"faster-whisper",
"ctranslate2",
"aiohttp",
"certifi",
"deepl",
"gtts",
"httpx",
"huggingface-hub",
"librosa",
"multidict",
"numpy==1.26.4",
"onnxruntime",
"openai",
"openai-whisper",
"Pillow",
"pydub",
"pygame",
"PySide6",
"pytz",
"PyYAML",
"requests",
"shiboken6",
"soundfile",
"SpeechRecognition",
"tencentcloud-sdk-python-common",
"tencentcloud-sdk-python-tmt",
"torch",
"torchaudio",
"zhconv",
"azure-cognitiveservices-speech",
"pydantic",
"pydantic_core",
"elevenlabs",
"plyer",
"flask",
"waitress",
"edge-tts",
"srt",
"deepgram-sdk",
"deepgram-captions",
"funasr",
"modelscope",
"anthropic",
"addict",
"datasets",
"simplejson",
"gradio_client",
"sortedcontainers",
"alibabacloud_alimt20181012",
"samplerate",
"google-cloud-texttospeech",
"hdbscan",
"tenacity",
"google-genai",
"hf_xet",
]


[project.urls]
Homepage = "https://pyvideotrans.com"
Repository = "https://github.com/jianchng512/pyvideotrans.git"





[tool.uv.sources]
# Install PyTorch with CUDA support on Linux/Windows (CUDA doesn't exist for Mac).
# NOTE: We must explicitly request them as `dependencies` above. These improved
# versions will not be selected if they're only third-party dependencies.
torch = [
  { index = "pytorch-cuda", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cuda", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]



[[tool.uv.index]]
name = "pytorch-cuda"
# Use PyTorch built for NVIDIA Toolkit version 12.8.
# Available versions: https://pytorch.org/get-started/locally/
url = "https://download.pytorch.org/whl/cu128"
# Only use this index when explicitly requested by `tool.uv.sources`.
explicit = true


